--- a/CTS_Analytics/Views/Mnemonic/cofv.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/cofv.cshtml
@@ -155,8 +155,8 @@
         </div>
 
         <div class="buttons buttons-horz horz-arrow" id="btn_st-4">
-            <a href='@Url.Action("Alarm", "DashBoard")' title="Весы" class="libra red">Весы</a>
-            <a href='@Url.Action("Alarm", "DashBoard")' title="Направление" class="arrow-right red">Стрелка</a>
+            <a href='@Url.Action("Alarm", "DashBoard")' title="Весы" class="libra green">Весы</a>
+            <a href='@Url.Action("Alarm", "DashBoard")' title="Направление" class="arrow-right green">Стрелка</a>
         </div>
 
         <div class="buttons buttons-horz horz-arrow" id="btn_st-5">
