--- a/CTS_Analytics/Views/Mnemonic/index.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/index.cshtml
@@ -847,8 +847,8 @@
         </div>
 
         <div class="buttons buttons-horz" id="btn_mine9">
-            <a href='@Url.Action("Alarm", "DashBoard")' class="libra red">@Resources.ResourceMnemonic.WeightBriges</a>
-            <a href='@Url.Action("Alarm", "DashBoard")' class="arrow-up red">@Resources.ResourceMnemonic.Arrow</a>
+            <a href='@Url.Action("Alarm", "DashBoard")' class="libra green">@Resources.ResourceMnemonic.WeightBriges</a>
+            <a href='@Url.Action("Alarm", "DashBoard")' class="arrow-up green">@Resources.ResourceMnemonic.Arrow</a>
         </div>
 
 
