--- a/CTS_Analytics/Views/Mnemonic/Mine_vagon.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/Mine_vagon.cshtml
@@ -89,7 +89,7 @@
                                 <td>@transfer.WagonTransfer.Brutto</td>
 								<td>@transfer.WagonTransfer.Direction</td>
 
-                                @if (transfer.Photo != null && transfer.Photo.PictureGallery.Count > 0)
+                                @if (transfer.Photo != null && transfer.Photo.PictureGallery.Any())
                                 {
                                     var uniqueDataID = 1;
                                     <td>
