scroll fix + raspozn fix

--- a/CTS_Analytics/Views/DashBoard/Index.cshtml
+++ b/CTS_Analytics/Views/DashBoard/Index.cshtml
@@ -3,9 +3,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-    <iframe src="http://@Request.Url.Host:3000/dashboard/db/index_@Resources.ResourceGeneral.CurrentLang?orgId=1&kiosk&from=1514743200000&to=1546279199999&theme=light" width="100%" onmouseover="resizeIframe(this)" height="1600" frameborder="0" scrolling="no" id="ifrm"> 
+<iframe src="http://@Request.Url.Host:3000/dashboard/db/index_@Resources.ResourceGeneral.CurrentLang?orgId=1&kiosk&from=1514743200000&to=1546279199999&theme=light" scrolling="no" width="100%" onload="resizeIframe(this)" height="1200" frameborder="0" id="ifrm" style="box-sizing: border-box;">
     </iframe>
-
+<button onclick="topFunction()" id="goTopBtn">^</button>
 <script>
      function resizeIframe(iframeID) {
         var iframe = window.parent.document.getElementById('ifrm');
