--- a/CTS_Analytics/Views/DashBoard/Mine.cshtml
+++ b/CTS_Analytics/Views/DashBoard/Mine.cshtml
@@ -9,7 +9,7 @@
 }
 
 <iframe src="http://@Request.Url.Host:3000/dashboard/db/@urlString?orgId=1&kiosk&from=1514743200000&to=1546279199999&theme=light" width="100%" onload="resizeIframe(this)" height="1200" frameborder="0" scrolling="no" id="ifrm"></iframe>
-
+<button onclick="topFunction()" id="goTopBtn">^</button>
 <script>
      function resizeIframe(iframeID) {
         var iframe = window.parent.document.getElementById('ifrm');
