--- a/CTS_Analytics/Content/anal_theme.css
+++ b/CTS_Analytics/Content/anal_theme.css
@@ -2,3 +2,23 @@
 {
 	margin-left:30px;
 }
+
+#goTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+
+    #goTopBtn:hover {
+        background-color: #555;
+    }
