More pain with RoleAdmin

--- a/CTS_RoleAdmin/Views/Home/Index.cshtml
+++ b/CTS_RoleAdmin/Views/Home/Index.cshtml
@@ -30,9 +30,9 @@
 	</div>
 </div>
 
-<br/>
-<input type="text" id="UserLoginInput" value="Enter login"/>
-<input type="button" id="UserLoginBtn" value="Check"/>
+<br />
+<input type="text" id="UserLoginInput" value="Enter login" />
+<input type="button" id="UserLoginBtn" value="Check" data-root="@Url.Content("~/")" />
 
 <script>
 	$(document).ready(function () {
@@ -40,25 +40,27 @@
 		$('#UserLoginBtn').click(function () {
 
 
-
+			var root = $("#UserLoginBtn").data('root');
 
 
 			$.ajax({
-				url: "CheckIfUserExists/?userLogin=" + $("#UserLoginInput").val(),
+				url: root + "Home/CheckIfUserExists/?userLogin=" + $("#UserLoginInput").val(),
 				type: "POST",
 				dataType: 'JSON',
 				cache: false,
 				async: true,
 				success: function (data) {
-					if (data.userFound) { 
-						alert("Message Sent");
+					if (data.userFound) {
+						window.location.href = root + "Home/EditUser/?userLogin=" + $("#UserLoginInput").val();
 					} else {
-						alert("Message Not Sent, Please check details");
+						alert("Пользователь с доменным логином " + $("#UserLoginInput").val() + " не найден");
 					}
 
 				}
 			});
 		});
 	});
-	
+
 </script>
+
+
