--- a/CTS_RoleAdmin/Views/Home/RoleList.cshtml
+++ b/CTS_RoleAdmin/Views/Home/RoleList.cshtml
@@ -4,72 +4,35 @@
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@if (Model != null && Model.Count > 0)
-{
-	@*<table>
-			<thead>
-				<tr>
-					@foreach (var r in Model[0].AnalyticsRoles)
-					{
-						<th class="vertical"><div class="vertical">@r.GroupDescriotion</div></th>
+<br />
+<input type="text" id="UserLoginInput" value="Enter login" />
+<input type="button" id="UserLoginBtn" value="Check" data-root="@Url.Content("~/")" />
+
+<script>
+	$(document).ready(function () {
+
+		$('#UserLoginBtn').click(function () {
+
+
+			var root = $("#UserLoginBtn").data('root');
+
+
+			$.ajax({
+				url: root + "Home/CheckIfUserExists/?userLogin=" + $("#UserLoginInput").val(),
+				type: "POST",
+				dataType: 'JSON',
+				cache: false,
+				async: true,
+				success: function (data) {
+					if (data.userFound) {
+						window.location.href = root + "Home/EditUser/?userLogin=" + $("#UserLoginInput").val();
+					} else {
+						alert("Пользователь с доменным логином " + $("#UserLoginInput").val() + " не найден");
 					}
-					@foreach (var r in Model[0].ManualInputRoles)
-					{
-						<th class="vertical"><div class="vertical">@r.GroupDescriotion</div></th>
-					}
-				</tr>
-				<tr>
-					<th colspan="@Model[0].AnalyticsRoles.Count()" style="text-align:center">Аналитика</th>
-					<th colspan="@Model[0].ManualInputRoles.Count()" style="text-align:center">Приложение ручного ввода</th>
-				</tr>
-			</thead>
-		</table>*@
 
-
-	<input type="button" name="AddButton" class="btn btn-content" value="Добавить нового пользователя" onclick="location.href='@Url.Action("Add", "Home")'" />
-
-	<br/>
-	<br/>
-
-	<table class="table table-striped table-hover ">
-		<thead>
-			<tr>
-				<th class="vertical"></th>
-				@foreach (var r in Model[0].AnalyticsRoles)
-				{
-					<th class="vertical"><div class="vertical" >@r.GroupDescriotion</div></th>
 				}
-				@foreach (var r in Model[0].ManualInputRoles)
-				{
-					<th class="vertical"><div class="vertical">@r.GroupDescriotion</div></th>
-				}
-			</tr>
-			<tr>
-				<th class="">Пользователь</th>
-				<th class="" colspan=@Model[0].AnalyticsRoles.Count() style="text-align:center">Аналитика</th>
-				<th class="" colspan=@Model[0].ManualInputRoles.Count() style="text-align:center">Приложение ручного ввода</th>
-			</tr>
-		</thead>
-		<tbody>
-			@foreach (var user in Model)
-			{
-				<tr>
-					<th class="">@user.UserName</th>
-					@foreach (var g in user.AnalyticsRoles.Concat(user.ManualInputRoles))
-					{
-						<th class="" style="text-align:center">@Html.CheckBoxFor(m => g.HasRole, new { @disabled = "true" })</th>
-					}
-					<th class="" style="text-align:center"><div>
-						<span>
-							<input type="button" name="EditButton" class="btn btn-primary btn-xs" value="Изменить" onclick="location.href='@Url.Action("Edit", "WagonScales", new { user = user.UserName })'" />
-						</span>
-						<span>
-							<input type="button" name="DeleteButton" class="btn btn-danger btn-xs" value="Удалить" onclick="ConfirmDelete('@Url.Action("Delete", "WagonScales", new { user = user.UserName })')" />
-						</span>
-						</div></th>
-				</tr>
-			}
+			});
+		});
+	});
 
-		</tbody>
-	</table>
-}
+</script>
