--- a/CTS_Analytics/Views/Mnemonic/Mine_skip.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/Mine_skip.cshtml
@@ -17,8 +17,8 @@
             <div class="result">
                 <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'> <i class="green"></i></a></div>
                 <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span><a href='@Url.Action("HseAlarm", "Mnemonic")'><i class="green"></i></a></div>
-				<div class="clearfix"></div>
-			</div>
+                <div class="clearfix"></div>
+            </div>
 
             <div class="close-button">
                 <a href='@Url.Action(Model.ReturnID, "Mnemonic")'>@Resources.ResourceMnemonic.Close  <i></i></a>
@@ -59,6 +59,13 @@
 
         <div id="text">
             <h3>@Resources.ResourceMnemonic.SkipsLiftingJournal</h3>
+            <div class="checkbox-inline">
+                @Html.CheckBoxFor(model => model.FilterManualInput,
+                                                                    new {
+                                                                    @data_url = Url.Action("Mine_skip", new { ID = Model.ReturnID, skipID = Model.SkipID })
+                                                                    })
+                @Resources.ResourceMnemonic.ManualInputFilter
+            </div>
             <div class="scrollbar-outer">
                 <table class="table table-striped table-hover">
                     <thead>
@@ -81,8 +88,8 @@
                                 <td>@transfer.TransferTimeStamp.ToString("HH:mm")</td>
                                 <td>@transfer.LiftingID</td>
                             </tr>
-                            }
-                        </tbody>
+                        }
+                    </tbody>
 
                 </table>
             </div>
