--- a/CTS_Analytics/Views/Mnemonic/Mine_konv.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/Mine_konv.cshtml
@@ -41,12 +41,11 @@
 
         <div id="text">
             <h3>@Resources.ResourceMnemonic.BeltScaleJournal</h3>
-            <div class="checkbox-inline">
-                @Html.CheckBoxFor(model => model.FilterManualInput,
-                                                               new {
-                                                               @data_url = Url.Action("Mine_konv", new { ID = Model.ReturnID, beltScaleID = Model.BeltID })
-                                                               })
-                @Resources.ResourceMnemonic.ManualInputFilter
+            <div class="checkbox-inline" data-url='@Url.Action("Mine_konv", new { ID = Model.ReturnID, beltScaleID = Model.BeltID })'>
+                @Html.CheckBoxFor(model => model.FilterManualInput)
+                <span class="filter-element">@Resources.ResourceMnemonic.ManualInputFilter</span>
+                @Html.CheckBoxFor(model => model.OrderByTransferTimeStampAsc)
+                <span>@Resources.ResourceMnemonic.OrderByTransferTimeStampAsc</span>
             </div>
             <div class="scrollbar-outer">
                 <table class="table table-striped table-hover">
