filters and alarm corrections

--- a/CTS_Analytics/Views/DashBoard/_DashAlarmLayout.cshtml
+++ b/CTS_Analytics/Views/DashBoard/_DashAlarmLayout.cshtml
@@ -4,8 +4,8 @@
 }
 
 <div class="topmenu">
-    <a href='@Url.Action("Alarm", "DashBoard")'>@Resources.ResourceDashboard.RailRoadIncidents</a>
-    <a  href='@Url.Action("Alarm_other", "DashBoard")'>@Resources.ResourceDashboard.OtherIncidents</a>
+    <a id="dashboardAlarmLink" href='@Url.Action("Alarm", "DashBoard")'>@Resources.ResourceDashboard.RailRoadIncidents</a>
+    <a id="dashboardAlarmOtherLink" href='@Url.Action("Alarm_other", "DashBoard")'>@Resources.ResourceDashboard.OtherIncidents</a>
 </div>
 
 @RenderBody()
