--- a/CTS_Analytics/Views/DashBoard/Alarm.cshtml
+++ b/CTS_Analytics/Views/DashBoard/Alarm.cshtml
@@ -8,3 +8,9 @@
 }
 
 <iframe src="http://@Request.Url.Host:3000/dashboard/db/@urlString?orgId=1&kiosk&from=1514743200000&to=1546279199999&theme=light" width="100%" onload="resizeIframe(this)" height="1200" frameborder="0" id="ifrm"></iframe>
+
+<script>
+    $('document').ready(function () {
+        $('#dashboardAlarmLink').addClass('active')
+    });
+</script>
