--- a/CTS_Analytics/Views/Mnemonic/Partials/_Stockpile4MineMnemonic.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/Partials/_Stockpile4MineMnemonic.cshtml
@@ -2,53 +2,62 @@
 @model CTS_Analytics.Models.Mnemonic.Mine_sklad
 
 @{
-    var stockpileFree = Model.StockPileCapacity - Model.AtStockPile;
-    var atStockPile = Model.AtStockPile > 0 ? Model.AtStockPile : 0 ;
+	var stockpileFree = Model.StockPileCapacity - Model.AtStockPile;
+	var atStockPile = Model.AtStockPile > 0 ? Model.AtStockPile : 0;
 }
 
 <div class="block block_w3 gray graytitle" id="@Model.DivID">
-    <div class="title">
+	<div class="title">
 
-        <a href="@Url.Action("Mine_sklad", "Mnemonic", new {ID= Model.ReturnID, warehouseID = Model.WarehouseID })">@Model.WarehouseName</a>
+		<a href="@Url.Action("Mine_sklad", "Mnemonic", new {ID= Model.ReturnID, warehouseID = Model.WarehouseID })">@Model.WarehouseName</a>
 
-    </div>
-    <div class="text">
-        <div class="circle-progress">
-            <span>
-                <b>@Model.AtStockPile</b> @Resources.ResourceMnemonic.Stockpile
+	</div>
+	<div class="text">
+		<div class="circle-progress">
+			<span>
+				<b>@atStockPile</b> @Resources.ResourceMnemonic.Stockpile
 
-            </span>
-            <input class="knob" data-thickness=".2" data-inputColor="#ffffff" data-width="150" data-height="150" data-bgColor="#c7c7c7" data-fgColor="#DB6365" data-displayInput="false" readonly data-min="0" data-max="@Model.StockPileCapacity" value="@atStockPile">
-        </div>
-        <div class="line">
-            <span class="name">@Resources.ResourceMnemonic.CoalFromCrushingMachinePerShift</span>
-            <div class="count">@Model.IncomePerShift</div>
-            <span class="caption">@Resources.ResourceMnemonic.Tonns</span>
+			</span>
+			<input class="knob" data-thickness=".2" data-inputColor="#ffffff" data-width="150" data-height="150" data-bgColor="#c7c7c7" data-fgColor="#DB6365" data-displayInput="false" readonly data-min="0" data-max="@Model.StockPileCapacity" value="@atStockPile">
+		</div>
+		<div class="line">
+			<span class="name">@Resources.ResourceMnemonic.CoalFromCrushingMachinePerShift</span>
+			<div class="count">@if (Model.IncomePerShift > 0)
+			{@Model.IncomePerShift }
+		else
+		{ <span>0</span>}</div>
+			<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 
-            <div class="clearfix"></div>
-        </div>
-        <div class="line">
-            <span class="name">@Resources.ResourceMnemonic.StockpileIncome</span>
-            <div class="count">@Model.IncomePerTimeInterval</div>
-            <span class="caption">@Resources.ResourceMnemonic.Tonns</span>
+			<div class="clearfix"></div>
+		</div>
+		<div class="line">
+			<span class="name">@Resources.ResourceMnemonic.StockpileIncome</span>
+			<div class="count">@if (Model.IncomePerTimeInterval > 0)
+			{@Model.IncomePerTimeInterval }
+		else
+		{ <span>0</span>}</div>
+			<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 
-            <div class="clearfix"></div>
-        </div>
-        <div class="line">
-            <span class="name">@Resources.ResourceMnemonic.StockPileTotal</span>
-            <div class="count">@Model.AtStockPile</div>
-            <span class="caption">@Resources.ResourceMnemonic.Tonns</span>
-            <div class="clearfix"></div>
-        </div>
-        <div class="line">
-            <span class="name">@Resources.ResourceMnemonic.StockpileFree</span>
-            <div class="count">@stockpileFree</div>
-            <span class="caption">@Resources.ResourceMnemonic.Tonns</span>
-            <div class="clearfix"></div>
-        </div>
-        <div class="result">
-            <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'> <i class="green"></i></a></div>
-            <div class="clearfix"></div>
-        </div>
-    </div>
+			<div class="clearfix"></div>
+		</div>
+		<div class="line">
+			<span class="name">@Resources.ResourceMnemonic.StockPileTotal</span>
+			<div class="count">@if (Model.AtStockPile > 0)
+			{@Model.AtStockPile }
+		else
+		{ <span>0</span>}</div>
+			<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
+			<div class="clearfix"></div>
+		</div>
+		<div class="line">
+			<span class="name">@Resources.ResourceMnemonic.StockpileFree</span>
+			<div class="count">@stockpileFree</div>
+			<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
+			<div class="clearfix"></div>
+		</div>
+		<div class="result">
+			<div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'> <i class="green"></i></a></div>
+			<div class="clearfix"></div>
+		</div>
+	</div>
 </div>
