--- a/CTS_Analytics/Views/Mnemonic/Mine_raspozn.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/Mine_raspozn.cshtml
@@ -51,6 +51,11 @@
 
         <div id="text">
             <h3>@Resources.ResourceMnemonic.RecognitionJourlal</h3>
+            <div id="FilterContainer"  class="checkbox-inline" data-url='@Url.Action("Mine_raspozn", new { raspoznID = Model.RaspoznID })'>
+                @Html.TextBoxFor(model => model.WagonNumberFilter)
+                <span id="wagonSearchFilter" class="glyphicon glyphicon-search"></span>
+                <span class="filter-element">@Resources.ResourceMnemonic.WagonNumberFilter</span>
+            </div>
             <div class="scrollbar-outer">
                 <table class="table table-striped table-hover">
                     <thead>
@@ -72,26 +77,26 @@
                             counter++;
                             string autoRecognClass = item.ManualRecogn ? "" : "<i class='icon-done'></i>";
                             string manualRecognClass = item.ManualRecogn ? "<i class='icon-hand'></i>" : "";
-                    <tr>
-                        <td>@item.Date.ToString("HH:mm dd.MM.yyyy")</td>
-                        <td>@item.IdSostav</td>
-                        <td>@item.WagonNumber</td>
-                        <td>@Html.Raw(autoRecognClass)</td>
-                        <td>@Html.Raw(manualRecognClass)</td>
-                        @if (item.PictureGallery != null)
-                        {
-                            var uniqueDataID = 1;
-                            <td>
-                                @foreach (var pic in item.PictureGallery)
+                            <tr>
+                                <td>@item.Date.ToString("HH:mm dd.MM.yyyy")</td>
+                                <td>@item.IdSostav</td>
+                                <td>@item.WagonNumber</td>
+                                <td>@Html.Raw(autoRecognClass)</td>
+                                <td>@Html.Raw(manualRecognClass)</td>
+                                @if (item.PictureGallery != null)
                                 {
-                                    <a data-fancybox="@item.GallleryName" data-caption="<b>@item.WagonNumber</b><span>@item.Date.ToString("yyyy.MM.dd HH:mm:ss")</span>" href="@Html.Raw(@"#data"+item.GallleryName+uniqueDataID)" class="photo">Фото</a>
-                                    <div style="display:none"><img id="@Html.Raw(@"data"+item.GallleryName+uniqueDataID)" src="@pic" /></div>
-                                    uniqueDataID++;
+                                    var uniqueDataID = 1;
+                                    <td>
+                                        @foreach (var pic in item.PictureGallery)
+                                        {
+                                            <a data-fancybox="@item.GallleryName" data-caption="<b>@item.WagonNumber</b><span>@item.Date.ToString("yyyy.MM.dd HH:mm:ss")</span>" href="@Html.Raw(@"#data"+item.GallleryName+uniqueDataID)" class="photo">Фото</a>
+                                            <div style="display:none"><img id="@Html.Raw(@"data"+item.GallleryName+uniqueDataID)" src="@pic" /></div>
+                                            uniqueDataID++;
+                                        }
+                                    </td>
                                 }
-                            </td>
-                        }
 
-                    </tr>
+                            </tr>
 
                         }
                     }
