Alarm_other from mnemonic index

--- a/CTS_Analytics/Views/Mnemonic/index.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/index.cshtml
@@ -59,7 +59,7 @@
                             shahwarning2 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'>@shahwarning1 </a></div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'>@shahwarning1 </a></div>
                     <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span> <a href='@Url.Action("HseAlarm", "Mnemonic")'>@shahwarning2</a></div>
                     <div class="clearfix"></div>
                 </div>
@@ -120,7 +120,7 @@
                             tentwarning2 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'> @tentwarning1</a></div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'> @tentwarning1</a></div>
                     <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span> <a href='@Url.Action("HseAlarm", "Mnemonic")'> @tentwarning2</a></div>
                     <div class="clearfix"></div>
                 </div>
@@ -179,7 +179,7 @@
                             lenwarning2 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'> @lenwarning1</a></div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'> @lenwarning1</a></div>
                     <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span> <a href='@Url.Action("HseAlarm", "Mnemonic")'> @lenwarning2</a></div>
                     <div class="clearfix"></div>
                 </div>
@@ -239,7 +239,7 @@
                             kazwarning2 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'>@kazwarning1 </a></div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'>@kazwarning1 </a></div>
                     <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span> <a href='@Url.Action("HseAlarm", "Mnemonic")'> @kazwarning2</a></div>
                     <div class="clearfix"></div>
                 </div>
@@ -300,7 +300,7 @@
                             abaywarning2 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'>@abaywarning1 </a></div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'>@abaywarning1 </a></div>
                     <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span> <a href='@Url.Action("HseAlarm", "Mnemonic")'> @abaywarning2</a></div>
                     <div class="clearfix"></div>
                 </div>
@@ -360,7 +360,7 @@
                             COFwarning1 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'>@COFwarning1 </a></div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'>@COFwarning1 </a></div>
                   
                     <div class="clearfix"></div>
                 </div>
@@ -412,7 +412,7 @@
                             StDubovwarning2 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'>@StDubovwarning1 </a></div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'>@StDubovwarning1 </a></div>
                     <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span> <a href='@Url.Action("HseAlarm", "Mnemonic")'> @StDubovwarning2</a></div>
                     <div class="clearfix"></div>
                 </div>
@@ -460,7 +460,7 @@
                             StAbayvwarning2 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'>@StAbayvwarning1</a> </div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'>@StAbayvwarning1</a> </div>
                     <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span> <a href='@Url.Action("HseAlarm", "Mnemonic")'> @StAbayvwarning2</a></div>
                     <div class="clearfix"></div>
                 </div>
@@ -511,7 +511,7 @@
                             StUglervwarning2 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'>@StUglervwarning1 </a></div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'>@StUglervwarning1 </a></div>
                     <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span> <a href='@Url.Action("HseAlarm", "Mnemonic")'> @StUglervwarning2</a></div>
                     <div class="clearfix"></div>
                 </div>
@@ -559,7 +559,7 @@
                             StRasporvwarning2 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'>@StRasporvwarning1 </a></div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'>@StRasporvwarning1 </a></div>
                     <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span> <a href='@Url.Action("HseAlarm", "Mnemonic")'> @StRasporvwarning2</a></div>
                     <div class="clearfix"></div>
                 </div>
@@ -618,7 +618,7 @@
                             kostwarning2 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'>@kostwarning1 </a></div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'>@kostwarning1 </a></div>
                     <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span> <a href='@Url.Action("HseAlarm", "Mnemonic")'> @kostwarning2</a></div>
                     <div class="clearfix"></div>
                 </div>
@@ -678,7 +678,7 @@
                             Kuzwarning2 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'>@Kuzwarning1 </a></div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'>@Kuzwarning1 </a></div>
                     <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span> <a href='@Url.Action("HseAlarm", "Mnemonic")'> @Kuzwarning2</a></div>
                     <div class="clearfix"></div>
                 </div>
@@ -739,7 +739,7 @@
                             Sar3arning2 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'>@Sar3arning1 </a></div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'>@Sar3arning1 </a></div>
                     <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span> <a href='@Url.Action("HseAlarm", "Mnemonic")'> @Sar3arning2</a></div>
                     <div class="clearfix"></div>
                 </div>
@@ -797,7 +797,7 @@
                             Sar1arning2 = Html.Raw(@"<i class='red'></i>");
                         }
                     }
-                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm", "DashBoard")'>@Sar1arning1</a></div>
+                    <div class="res"><span>@Resources.ResourceMnemonic.CoalWarning</span><a href='@Url.Action("Alarm_other", "DashBoard")'>@Sar1arning1</a></div>
                     <div class="res"><span>@Resources.ResourceMnemonic.HSEWarning</span> <a href='@Url.Action("HseAlarm", "Mnemonic")'> @Sar1arning2</a></div>
                     <div class="clearfix"></div>
                 </div>
